# atlas-OcuKnow

./: .gitignore  Ariel2.files  CMakeCache.txt  CMakeLists.txt  Halfeye.qrc.autosave  OcuKnow.files  README.md  Test.files  eyemodel.ui  eyemodel.ui.autosave
UI/: moc_introwidget.cpp_parameters
src/: CMakeLists.txt  README.md  cmakelists.txt  main.cpp  questions.txt  resources.qrc
src/UI/: CMakeCache.txt  intro.cpp  intro.h  introwidget.cpp  introwidget.h  mainwindow.cpp  splashscreen.cpp  splashscreen.h  ui.cpp
src/UI/credits/: creditswidget.cpp  creditswidget.h
src/UI/intro/: introwidget.cpp  introwidget.h
src/UI/quiz/: questions.txt  quiz.cpp  quiz.h
src/UI/studyguide/: eye_model.cpp  eye_model.cpp.autosave  eye_model.h  eyemodel.cpp  eyemodel.cpp.autosave  eyemodel.h  eyemodel.ui  eyemodel.ui.autosave
src/assets/: questions.txt
src/graphics/: eye_model.cpp
src/logic/: mainwindow.h  quiz.cpp  quiz.h
